syntax = "proto3";

package calculator;

option go_package = "github.com/sikderg/go-grpc-example/calculator/proto";

service CalculatorService {
    rpc Add(AddRequest) returns (AddResponse);
    rpc Sub(SubRequest) returns (SubResponse);
}


message AddRequest {
    int32 num1 = 1;
    int32 num2 = 2;
}

message AddResponse{
    int32 sum = 1;
}

message SubRequest{
    int32 num1 =1;
    int32 num2 =2;

}
message SubResponse {
    int32 sub =1;
}